force-app/main/default/objects/AWSPricebookMapping__mdt/AWSPricebookMapping__mdt.object-meta.xml
<CustomObject>
    <label>AWSPricebookMapping</label>
    <pluralLabel>AWSPricebookMappings</pluralLabel>
</CustomObject>