force-app/main/default/objects/AWSPricebookMapping__mdt/fields/MapToPricebook__c.field-meta.xml
<CustomField>
    <fullName>MapToPricebook__c</fullName>
    <label>MapToPricebook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PrimaryEducation</fullName>
                <default>true</default>
                <label>Primary Education</label>
            </value>
            <value>
                <fullName>SecondaryEducation</fullName>
                <label>Secondary Education</label>
            </value>
            <value>
                <fullName>VocationalEducation</fullName>
                <label>Vocational Education</label>
            </value>
            <value>
                <fullName>HigherEducation</fullName>
                <label>Higher Education</label>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>SIMSLMS</fullName>
                <label>SIMS / LMS</label>
            </value>
            <value>
                <fullName>All Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>