force-app/main/default/objects/AWSPricebookMapping__mdt/fields/SubSegment__c.field-meta.xml
<CustomField>
    <fullName>SubSegment__c</fullName>
    <label>SubSegment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>