force-app/main/default/objects/AWSPricebookMapping__mdt/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plantyn</fullName>
                <default>true</default>
                <label>Plantyn</label>
            </value>
            <value>
                <fullName>Noordhoff</fullName>
            </value>
            <value>
                <fullName>Liber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>