force-app/main/default/objects/AWSPricebookMapping__mdt/listViews/Plantyn.listView-meta.xml
<ListView>
    <fullName>Plantyn</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>MapToPricebook__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>SubSegment__c</columns>
    <columns>Subsidiary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>Plantyn</value>
    </filters>
    <label>Plantyn</label>
</ListView>